New hosts and update roles

--- a/odontotheme/static/css/odonto.css
+++ b/odontotheme/static/css/odonto.css
@@ -188,8 +188,7 @@ label {
   margin-top: 20px; }
 
 .ngProgressLiteBar {
-  top: 90px;
-  background-color: white; }
+  display: none; }
 
 .content-offset {
   margin-top: 100px; }
