--- a/odontotheme/templates/opal.html
+++ b/odontotheme/templates/opal.html
@@ -1,5 +1,6 @@
 {% extends 'app_layouts/layout_base.html' %}
-{% load menus %}
+{% load links %}
+
 
 {% block navbar %}{% include 'navbar.html' %}{% endblock %}
 
@@ -13,7 +14,16 @@
         </li>
       </ul>
 
-      {% menu %}
+      <ul class="nav navbar-nav navbar-right">
+        <li ng-class="{active: $location.absUrl().indexOf('add_patient') != -1}">
+          {% link_to "Register patient" pathways.AddPatientPathway %}
+        </li>
+        {% if roles.is_dentist %}
+          <li ng-class="{active: $location.absUrl().indexOf('add_patient') != -1}">
+            {% link_to "Register patient" pathways.AddPatientPathway %}
+          </li>
+        {% endif %}
+      </ul>
 
       <div id="logout">
 
