Change demographics sex to use male/female as required by FP17, make the field require

--- a/odonto/templates/forms/demographics_form.html
+++ b/odonto/templates/forms/demographics_form.html
@@ -20,7 +20,7 @@
     {% date_of_birth_field style="vertical" label="Date of birth" %}
   </div>
   <div class="col-md-5 col-md-offset-1">
-    {% select field="Demographics.sex" style="vertical" %}
+    {% radio field="Demographics.sex" style="vertical" required=True %}
   </div>
 </div>
 <div class="row">
