--- a/odonto/templates/forms/demographics_form.html
+++ b/odonto/templates/forms/demographics_form.html
@@ -2,7 +2,7 @@
 {% load odonto_forms %}
 <div class="row">
   <div class="col-md-5">
-    {% input field="Demographics.nhs_number" label="NHS number" maxlength="10" style="vertical"%}
+    {% input field="Demographics.nhs_number" label="NHS number" maxlength="10" style="vertical" %}
   </div>
 </div>
 <div class="row">
@@ -10,10 +10,10 @@
     {% input field="Demographics.title" style="vertical" %}
   </div>
   <div class="col-md-3 col-md-offset-1">
-    {% input field="Demographics.first_name" label="First forename" style="vertical" %}
+    {% input field="Demographics.first_name" label="First forename" style="vertical" required=True maxlength="20" minlength="2" %}
   </div>
   <div class="col-md-5 col-md-offset-1">
-    {% input field="Demographics.surname" style="vertical" %}
+    {% input field="Demographics.surname" style="vertical" required=True maxlength="20" minlength="2" %}
   </div>
 </div>
 <div class="row">
@@ -21,7 +21,12 @@
     {% date_of_birth_field style="vertical" label="Date of birth" %}
   </div>
   <div class="col-md-5 col-md-offset-1">
-    {% btn_radio field="Demographics.sex" %}
+    {% btn_radio field="Demographics.sex" required=True %}
+  </div>
+</div>
+<div class="row">
+  <div class="col-md-5">
+    {% input field="Demographics.phone_number" style="vertical" element_name="tel" %}
   </div>
 </div>
 <div class="row">
