removes a typo in the demographics form

--- a/odonto/templates/forms/demographics_form.html
+++ b/odonto/templates/forms/demographics_form.html
@@ -17,7 +17,7 @@
   </div>
 </div>
 <div class="row">
-  <div class="col-md-5">b
+  <div class="col-md-5">
     {% date_of_birth_field style="vertical" label="Date of birth" %}
   </div>
   <div class="col-md-5 col-md-offset-1">
