--- a/odonto/templates/pathway/templates/pathway_base.html
+++ b/odonto/templates/pathway/templates/pathway_base.html
@@ -1,6 +1,6 @@
 {% load forms %}
 {% block pathway_container %}
-  <div class="container content-offset pathway">
+  <div class="col-md-12 content-offset pathway">
 
     <form name="form" class="form-horizontal" novalidate>
       <div class="row">
