hides the menu bar on small screens, it needs some form of show display menu but this should not be used in this format so we can add it later

--- a/odontotheme/static/css/odonto.scss
+++ b/odontotheme/static/css/odonto.scss
@@ -164,6 +164,9 @@ label{
   left: 0px;
   top: 300px;
   margin-left: 25px;
+  @media(max-width: 991px){
+    display: none;
+  }
 }
 
 #episode-history a{
@@ -352,9 +355,12 @@ label{
 }
 
 #side-nav {
-  background-color: #124c91;
   background-color: #487DBC;
-  height: 100vh
+  height: 100vh;
+
+  @media(max-width: 991px){
+    display: none;
+  }
 }
 #side-nav ul.app-info {
   padding-top: 120px;
