--- a/odontotheme/static/css/odonto.css
+++ b/odontotheme/static/css/odonto.css
@@ -155,6 +155,11 @@ label {
   top: 300px;
   margin-left: 25px;
 }
+@media (max-width: 991px) {
+  #episode-history {
+    display: none;
+  }
+}
 
 #episode-history a {
   padding: 5px;
@@ -353,9 +358,13 @@ label {
 }
 
 #side-nav {
-  background-color: #124c91;
   background-color: #487DBC;
   height: 100vh;
+}
+@media (max-width: 991px) {
+  #side-nav {
+    display: none;
+  }
 }
 
 #side-nav ul.app-info {
