fixes the alignment of the button group radio buttons with bootstrap grid

--- a/odonto/templates/forms/fp17_incomplete_treatment_form.html
+++ b/odonto/templates/forms/fp17_incomplete_treatment_form.html
@@ -1,8 +1,10 @@
 {% load forms %}
 {% load odonto_forms %}
 <div class="row">
-  <div class="col-md-5 col-md-offset-1">
+  <div class="col-md-5">
     {% datepicker field="Fp17IncompleteTreatment.date_of_acceptance" style="vertical" %}
+  </div>
+  <div class="col-md-5 col-md-offset-1">
     {% datepicker field="Fp17IncompleteTreatment.completion_or_last_visit" style="vertical" %}
     <div class="row">
       <button class="btn btn-secondary" ng-click="completion_same_as_acceptance()">
