--- a/odonto/templates/_helpers/btn_radio.html
+++ b/odonto/templates/_helpers/btn_radio.html
@@ -1,19 +1,23 @@
 <div class="form-group">
   <div class="btn-group">
     <div class="row">
-      <label class="control-label">
-        {{ label }}
-      </label>
+      <div class="col-md-12">
+        <label class="control-label">
+          {{ label }}
+        </label>
+      </div>
     </div>
     <div class="row">
-      <label class="btn btn-default btn-radio-group"
-            ng-model="{{ model }}"
-            uib-btn-radio="'[[ i ]]'"
-            name="[[ {{ element_name }} ]]"
-            {% if required %}required {% endif %}
-            ng-repeat="i in {{ lookuplist }} track by $index">
-        [[ i ]]
-      </label>
+      <div class="col-md-12">
+        <label class="btn btn-default btn-radio-group"
+              ng-model="{{ model }}"
+              uib-btn-radio="'[[ i ]]'"
+              name="[[ {{ element_name }} ]]"
+              {% if required %}required {% endif %}
+              ng-repeat="i in {{ lookuplist }} track by $index">
+          [[ i ]]
+        </label>
+      </div>
     </div>
   </div>
 </div>
