Adds a number field and a teeth field that contain have min/max properties and validate accordingly

--- a/odonto/templates/forms/fp17_clinical_data_set_form.html
+++ b/odonto/templates/forms/fp17_clinical_data_set_form.html
@@ -18,47 +18,44 @@
   <div class="col-md-3 col-md-offset-1">
     {% btn_checkbox field="Fp17ClinicalDataSet.best_practice_prevention" unit="number" style="vertical" %}
   </div>
-  <div class="col-md-3 col-md-offset-1">
-
-  </div>
 </div>
 
 <div class="row content-offset-20">
   <div class="col-md-1">
-    {% input field="Fp17ClinicalDataSet.fissure_sealants" unit="teeth" maxlength="2" style="vertical" %}
+    {% teeth field="Fp17ClinicalDataSet.fissure_sealants" %}
   </div>
   <div class="col-md-1 col-md-offset-1">
-    {% input field="Fp17ClinicalDataSet.radiographs_taken" maxlength="2" unit="number"  style="vertical" %}
+    {% number field="Fp17ClinicalDataSet.radiographs_taken" min="0" maxlength="2" unit="number" %}
   </div>
   <div class="col-md-1 col-md-offset-1">
     {% input field="Fp17ClinicalDataSet.endodontic_treatment" style="vertical" %}
   </div>
   <div class="col-md-1 col-md-offset-1">
-    {% input field="Fp17ClinicalDataSet.veneers_applied" unit="teeth" maxlength="2" style="vertical" %}
+    {% teeth field="Fp17ClinicalDataSet.veneers_applied" %}
   </div>
   <div class="col-md-1 col-md-offset-1">
-    {% input field="Fp17ClinicalDataSet.bridges_fitted" unit="teeth" maxlength="2" style="vertical" %}
+    {% teeth field="Fp17ClinicalDataSet.bridges_fitted" %}
   </div>
   <div class="col-md-1 col-md-offset-1">
-    {% input field="Fp17ClinicalDataSet.crowns_provided" unit="teeth" maxlength="2" style="vertical" %}
+    {% teeth field="Fp17ClinicalDataSet.crowns_provided" %}
   </div>
 </div>
 
 <div class="row content-offset-20">
   <div class="col-md-1">
-    {% input field="Fp17ClinicalDataSet.upper_denture_acrylic" unit="teeth" maxlength="2" style="vertical" %}
+    {% teeth field="Fp17ClinicalDataSet.upper_denture_acrylic" %}
   </div>
   <div class="col-md-1 col-md-offset-1">
-    {% input field="Fp17ClinicalDataSet.lower_denture_acrylic" unit="teeth" maxlength="2" style="vertical" %}
+    {% teeth field="Fp17ClinicalDataSet.lower_denture_acrylic" %}
   </div>
   <div class="col-md-1 col-md-offset-1">
-    {% input field="Fp17ClinicalDataSet.lower_denture_metal" unit="teeth" maxlength="2" style="vertical" %}
+    {% teeth field="Fp17ClinicalDataSet.lower_denture_metal" %}
   </div>
   <div class="col-md-1 col-md-offset-1">
-    {% input field="Fp17ClinicalDataSet.upper_denture_metal" unit="teeth" maxlength="2" style="vertical" %}
+    {% teeth field="Fp17ClinicalDataSet.upper_denture_metal" %}
   </div>
   <div class="col-md-1 col-md-offset-1">
-    {% input field="Fp17ClinicalDataSet.antibiotic_items_prescribed" unit="teeth" maxlength="2" style="vertical" %}
+    {% number field="Fp17ClinicalDataSet.antibiotic_items_prescribed" min="0" maxlength="2" %}
   </div>
   <div class="col-md-1 col-md-offset-1">
 
@@ -67,36 +64,36 @@
 
 <div class="row content-offset-20">
   <div class="col-md-1">
-    {% input field="Fp17ClinicalDataSet.extractions" unit="teeth" maxlength="2" style="vertical" %}
+    {% teeth field="Fp17ClinicalDataSet.extractions" %}
   </div>
   <div class="col-md-1 col-md-offset-1">
-    {% input field="Fp17ClinicalDataSet.inlays" unit="teeth" maxlength="2" style="vertical" %}
+    {% teeth field="Fp17ClinicalDataSet.inlays" %}
   </div>
   <div class="col-md-3 col-md-offset-1">
     {% input label="Referral for Advanced Mandatory Services (AMS)" field="Fp17ClinicalDataSet.referral_for_advanced_mandatory_services_band" unit="band" style="vertical" %}
   </div>
   <div class="col-md-3 col-md-offset-1">
-    {% input field="Fp17ClinicalDataSet.permanent_fillings_and_sealant_restorations" unit="teeth" maxlength="2" style="vertical" %}
+    {% teeth field="Fp17ClinicalDataSet.permanent_fillings_and_sealant_restorations" %}
   </div>
 </div>
 
 <div class="row content-offset-20">
   <div class="col-md-1">
-    {% input field="Fp17ClinicalDataSet.decayed_teeth_permanent" unit="teeth" maxlength="2" style="vertical" %}
+    {% teeth field="Fp17ClinicalDataSet.decayed_teeth_permanent" %}
   </div>
   <div class="col-md-1 col-md-offset-1">
-    {% input field="Fp17ClinicalDataSet.decayed_teeth_deciduous" unit="teeth" maxlength="2" style="vertical" %}
+    {% teeth field="Fp17ClinicalDataSet.decayed_teeth_deciduous" %}
   </div>
   <div class="col-md-1 col-md-offset-1">
-    {% input field="Fp17ClinicalDataSet.filled_teeth_permanent" unit="teeth" maxlength="2" style="vertical" %}
+    {% teeth field="Fp17ClinicalDataSet.filled_teeth_permanent" %}
   </div>
   <div class="col-md-1 col-md-offset-1">
-    {% input field="Fp17ClinicalDataSet.filled_teeth_deciduous" unit="teeth" maxlength="2" style="vertical" %}
+    {% teeth field="Fp17ClinicalDataSet.filled_teeth_deciduous" %}
   </div>
   <div class="col-md-1 col-md-offset-1">
-    {% input field="Fp17ClinicalDataSet.missing_teeth_permanent" unit="teeth" maxlength="2" style="vertical" %}
+    {% teeth field="Fp17ClinicalDataSet.missing_teeth_permanent" %}
   </div>
   <div class="col-md-1 col-md-offset-1">
-    {% input field="Fp17ClinicalDataSet.missing_teeth_deciduous" unit="teeth" maxlength="2" style="vertical" %}
+    {% teeth field="Fp17ClinicalDataSet.missing_teeth_deciduous" %}
   </div>
 </div>
