--- a/odonto/templates/forms/fp17_exemptions_form.html
+++ b/odonto/templates/forms/fp17_exemptions_form.html
@@ -57,6 +57,6 @@
 </div>
 <div class="row">
   <div class="col-md-5">
-    {% input field="Fp17Exemptions.patient_charge_collected" style="vertical" %}
+    {% number field="Fp17Exemptions.patient_charge_collected" style="vertical" min="0" %}
   </div>
 </div>
