validates all numeric fields in accordance with the guidance

--- a/odonto/templates/forms/fp17_clinical_data_set_form.html
+++ b/odonto/templates/forms/fp17_clinical_data_set_form.html
@@ -79,21 +79,21 @@
 
 <div class="row content-offset-20">
   <div class="col-md-1">
-    {% teeth field="Fp17ClinicalDataSet.decayed_teeth_permanent" %}
+    {% teeth field="Fp17ClinicalDataSet.decayed_teeth_permanent" max="32" %}
   </div>
   <div class="col-md-1 col-md-offset-1">
-    {% teeth field="Fp17ClinicalDataSet.decayed_teeth_deciduous" %}
+    {% teeth field="Fp17ClinicalDataSet.decayed_teeth_deciduous" max="20" %}
   </div>
   <div class="col-md-1 col-md-offset-1">
-    {% teeth field="Fp17ClinicalDataSet.filled_teeth_permanent" %}
+    {% teeth field="Fp17ClinicalDataSet.filled_teeth_permanent" max="32" %}
   </div>
   <div class="col-md-1 col-md-offset-1">
-    {% teeth field="Fp17ClinicalDataSet.filled_teeth_deciduous" %}
+    {% teeth field="Fp17ClinicalDataSet.filled_teeth_deciduous" max="20" %}
   </div>
   <div class="col-md-1 col-md-offset-1">
-    {% teeth field="Fp17ClinicalDataSet.missing_teeth_permanent" %}
+    {% teeth field="Fp17ClinicalDataSet.missing_teeth_permanent" max="32" %}
   </div>
   <div class="col-md-1 col-md-offset-1">
-    {% teeth field="Fp17ClinicalDataSet.missing_teeth_deciduous" %}
+    {% teeth field="Fp17ClinicalDataSet.missing_teeth_deciduous" max="12" %}
   </div>
 </div>
