--- a/odonto/templates/forms/fp17_recall_form.html
+++ b/odonto/templates/forms/fp17_recall_form.html
@@ -11,6 +11,6 @@
 </div>
 <div class="row">
   <div class="col-md-3">
-    {% number label="Recall interval" field="Fp17Recall.number_of_months" maxlength="2" unit="months" min="0" %}
+    {% number label="Recall interval" field="Fp17Recall.number_of_months" maxlength="2" unit="months" min="1" max="24" %}
   </div>
 </div>
