Fixes the search and welcome screens to remove the container like as previously done to all other base templates

--- a/odontotheme/templates/welcome.html
+++ b/odontotheme/templates/welcome.html
@@ -1,12 +1,19 @@
 {% load static %}
-<div class="container content-offset">
-  <div class="content-offset">
-    <center>
-      <p>
-        <img src="{% static 'img/odonto_logo.png' %}" />
-      </p>
-      <p>
-        Search for a patient to find their FP17 record
-      </p>
-    </center>
+<div class="content-offset-50">
+  <div class="row content-offset">
+    <div class="col-md-12">
+      <div class="row content-offset">
+        <div class="col-md-12">
+          <center>
+              <p>
+                <img src="{% static 'img/odonto_logo.png' %}" />
+              </p>
+              <p>
+                Search for a patient to find their FP17 record
+              </p>
+            </center>
+        </div>
+      </div>
   </div>
+  </div>
+</div>
