--- a/odontotheme/templates/search.html
+++ b/odontotheme/templates/search.html
@@ -1,4 +1,4 @@
-<div class="container content-offset search-container">
+<div class="content-offset search-container">
 
   <div class="panel panel-primary search-panel panel-container">
     <!-- Default panel contents -->
