--- a/odonto/templates/forms/fp17_incomplete_treatment_form.html
+++ b/odonto/templates/forms/fp17_incomplete_treatment_form.html
@@ -2,7 +2,7 @@
 {% load odonto_forms %}
 <div class="row">
   <div class="col-md-5">
-    {% datepicker field="Fp17IncompleteTreatment.date_of_acceptance" style="vertical" %}
+    {% datepicker field="Fp17IncompleteTreatment.date_of_acceptance" style="vertical" required=True %}
   </div>
   <div class="col-md-5 col-md-offset-1">
     {% datepicker field="Fp17IncompleteTreatment.completion_or_last_visit" style="vertical" %}
