--- a/odonto/templates/forms/fp17_treatment_category_form.html
+++ b/odonto/templates/forms/fp17_treatment_category_form.html
@@ -1,8 +1,8 @@
 {% load forms %}
 {% load odonto_forms %}
 <div class="row">
-  <div class="col-md-3">
-    {% select field="Fp17TreatmentCategory.treatment_category" style="vertical"%}
+  <div class="col-md-12">
+    {% btn_radio field="Fp17TreatmentCategory.treatment_category" style="vertical"%}
   </div>
 </div>
 <div class="row">
