--- a/odonto/templates/detail/dental_care.html
+++ b/odonto/templates/detail/dental_care.html
@@ -9,10 +9,13 @@
   <p>
 </div>
 
-<h2>FP17 Summary</h2>
 
 <!-- mid Treatment View -->
 <div ng-show="episode.fp17_incomplete_treatment[0].date_of_acceptance">
+  <h2>
+    FP17 Summary
+    {% include "partials/edit_open_or_complete_fp17_button.html" %}
+  </h2>
   <div class="row">
     <div class="col-md-6">
       {% record_panel models.Fp17DentalCareProvider editable=False %}
@@ -38,4 +41,7 @@
       {% record_panel models.Fp17Recall editable=False %}
     </div>
   </div>
+  <h2>
+    {% include "partials/edit_open_or_complete_fp17_button.html" %}
+  </h2>
 </div>
