--- a/odonto/templates/forms/demographics_form.html
+++ b/odonto/templates/forms/demographics_form.html
@@ -7,7 +7,7 @@
 </div>
 <div class="row">
   <div class="col-md-1">
-    {% input field="Demographics.title" style="vertical" %}
+    {% select field="Demographics.title" style="vertical" %}
   </div>
   <div class="col-md-3 col-md-offset-1">
     {% input field="Demographics.first_name" label="First forename" style="vertical" required=True maxlength="20" minlength="2" %}
