--- a/odonto/templates/partials/edit_open_or_complete_fp17_button.html
+++ b/odonto/templates/partials/edit_open_or_complete_fp17_button.html
@@ -1,13 +1,17 @@
 {% load links %}
 <!-- Key Action button-->
-<span ng-show="episode.fp17_incomplete_treatment[0].date_of_acceptance">
+<span ng-show="episode.fp17_incomplete_treatment[0].date_of_acceptance && episode.stage != 'Open Orthodontic'">
   {% if roles.is_dentist %}
     {% button_to "Complete FP17" pathways.CompleteFP17Pathway ngpatient="patient.id" ngepisode="episode.id" classes="btn-primary btn-lg pull-right" %}
   {% else %}
     {% button_to "Edit FP17" pathways.AdminFP17Pathway ngpatient="patient.id" ngepisode="episode.id" classes="btn-primary btn-lg pull-right" %}
   {% endif %}
 </span>
-<span ng-hide="episode.fp17_incomplete_treatment[0].date_of_acceptance">
+<span ng-hide="episode.fp17_incomplete_treatment[0].date_of_acceptance || episode.stage == 'Open Orthodontic'">
   {% button_to "Open an FP17" pathways.Fp17Pathway ngpatient="patient.id" ngepisode="episode.id" classes="btn-primary btn-lg pull-right" %}
 </span>
+<span ng-show="episode.stage == 'Open Orthodontic'">
+  {% button_to "Edit FP17O" pathways.Fp17OPathway ngpatient="patient.id" ngepisode="episode.id" classes="btn-primary btn-lg pull-right" %}
+</span>
+
 <!-- End Key Action Buttons -->
