--- a/odonto/templates/patient_detail.html
+++ b/odonto/templates/patient_detail.html
@@ -12,23 +12,6 @@
   </p>
 </div>
 
-
-<div id="episode-history">
-  <hr />
-  <h4>Courses of treatment</h4>
-  <a class=""
-     ng-class="{'bg-active': view == null && e.id == episode.id}"
-     ng-repeat="e in patient.episodes"
-     href="[[ '/#' + e.link]]"
-     ng-click="switch_to_episode($index, $event)"
-     >
-    [[ e.fp17_incomplete_treatment[0].treatment_band ]]
-    [[ e.fp17_incomplete_treatment[0].completion_or_last_visit | momentDateFormat:'YYYY']]
-    [[ e.stage ]]
-  </a>
-</div>
-
-
 <div class="content-offset {% block container_classes %}{% endblock %}"
      ng-hide="patient == null">
   <div class="panel panel-primary panel-container patient-detail {% block panel_classes %}{% endblock %}">
@@ -67,13 +50,37 @@
       <div class="row content-offset-25">
         {% block content %}
           <div class="col-md-12">
-            {% for episode_category in episode_categories %}
-              {% if episode_category.detail_template %}
-                <div class="row" ng-show="view == null && episode.category_name == '{{ episode_category.display_name }}'">
-                  {% include episode_category.detail_template %}
-                </div>
-              {% endif %}
-            {% endfor %}
+            {% comment %}
+              {% for episode_category in episode_categories %}
+                {% if episode_category.detail_template %}
+                  <div class="row" ng-show="view == null && episode.category_name == '{{ episode_category.display_name }}'">
+                    {% include episode_category.detail_template %}
+                  </div>
+                {% endif %}
+              {% endfor %}
+            {% endcomment %}
+
+            <div class="row">
+              <button class="btn btn-primary disabled pull-right">
+                Open FP17
+              </button>
+              <button class="btn btn-primary pull-right" style="margin-right: 10px;">
+                Open FP17O
+              </button>
+            </div>
+
+            <div class="row content-offset-20">
+              <table class="table">
+                <tr ng-repeat="e in patient.episodes">
+                  <td>Episode type</td>
+                  <td>[[ e.stage ]]</td>
+                  <td>Start date ? </td>
+                  <td></td>
+                  <td><a href="#" class="btn btn-small btn-primary">Edit &nbsp;</a></td>
+                </tr>
+              </table>
+            </div>
+
             {% for detail in detail_views %}
               <div class="row" ng-show="view == '{{ detail.get_slug }}'">
                 {% include detail.template %}
